--- a/pickups.html
+++ b/pickups.html
@@ -324,9 +324,9 @@
 <table width=650 border=2>
 <tr bgcolor="#000A78">
 <td colspan=2><font size=4 color='white'><center>Trades</td></tr>
-<tr><td width=50>9/14</td>
+<tr><td width=50>9/7</td>
 <td width=600>
 Free Pickups:<br>
-none
+Rich - Chase McLaughlin/Tyler Bass (9/7)
 </td></tr>
 </table>
