--- a/roster.html
+++ b/roster.html
@@ -139,7 +139,7 @@
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
 <tr><td> GB</td><td>Tucker Kraft           </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>BUF</td><td>Tyler Bass             </td></tr>
+<tr><td> TB</td><td>Chase McLaughlin       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>Tetairoa McMillan      </td></tr>
 <tr><td>TEN</td><td>Elic Ayomanor          </td></tr>
