--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <tr>
 <td bgcolor=#F2F2ED>
 <b>Week</b>
-<a href="week1.html"><b>1P</b></a><br>
+<a href="week1.html"><b>1</b></a>
+<a href="week2.html"><b>2P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -58,46 +59,46 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>John(9)</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>12605</font></td>
-    <td><font size=2>10070</font></td>
-    <td><font size=2>995</font></td>
-    <td><font size=2>375</font></td>
-    <td><font size=2>3</font></td>
-<tr><td><font size=2>Randy(5)</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>12010</font></td>
-    <td><font size=2>9365</font></td>
-    <td><font size=2>1125</font></td>
-    <td><font size=2>295</font></td>
-    <td><font size=2>3</font></td>
-<tr><td><font size=2>Mike(3)</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>9765</font></td>
-    <td><font size=2>9035</font></td>
-    <td><font size=2>790</font></td>
-    <td><font size=2>220</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>States(1)</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>10</font></td>
-    <td><font size=2>8900</font></td>
-    <td><font size=2>8975</font></td>
-    <td><font size=2>750</font></td>
-    <td><font size=2>215</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Sam(7)</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>11</font></td>
-    <td><font size=2>11830</font></td>
-    <td><font size=2>11895</font></td>
-    <td><font size=2>1135</font></td>
-    <td><font size=2>350</font></td>
+<tr><td><font size=2>States(3)</font></td>
     <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>615</font></td>
+    <td><font size=2>335</font></td>
+    <td><font size=2>615</font></td>
+    <td><font size=2>615</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Matthew(7)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>615</font></td>
+    <td><font size=2>560</font></td>
+    <td><font size=2>615</font></td>
+    <td><font size=2>615</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Steven(1)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>560</font></td>
+    <td><font size=2>615</font></td>
+    <td><font size=2>560</font></td>
+    <td><font size=2>560</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Rich(5)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>470</font></td>
+    <td><font size=2>595</font></td>
+    <td><font size=2>470</font></td>
+    <td><font size=2>470</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Randy(9)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>335</font></td>
+    <td><font size=2>615</font></td>
+    <td><font size=2>335</font></td>
+    <td><font size=2>335</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -106,46 +107,46 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Roger(2)</font></td>
-    <td><font size=2>12</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>12775</font></td>
-    <td><font size=2>9505</font></td>
-    <td><font size=2>1185</font></td>
-    <td><font size=2>375</font></td>
-    <td><font size=2>3</font></td>
-<tr><td><font size=2>Grant(10)</font></td>
-    <td><font size=2>12</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>14650</font></td>
-    <td><font size=2>10395</font></td>
-    <td><font size=2>1405</font></td>
-    <td><font size=2>410</font></td>
-    <td><font size=2>5</font></td>
-<tr><td><font size=2>Steven(8)</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>10845</font></td>
-    <td><font size=2>9940</font></td>
-    <td><font size=2>975</font></td>
-    <td><font size=2>340</font></td>
+<tr><td><font size=2>Mike(2)</font></td>
     <td><font size=2>1</font></td>
-<tr><td><font size=2>Rich(6)</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>9155</font></td>
-    <td><font size=2>10390</font></td>
-    <td><font size=2>790</font></td>
-    <td><font size=2>25</font></td>
     <td><font size=2>0</font></td>
-<tr><td><font size=2>Matthew(4)</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>11</font></td>
-    <td><font size=2>10940</font></td>
-    <td><font size=2>11220</font></td>
-    <td><font size=2>1105</font></td>
-    <td><font size=2>245</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>730</font></td>
+    <td><font size=2>610</font></td>
+    <td><font size=2>730</font></td>
+    <td><font size=2>730</font></td>
+    <td><font size=2>1</font></td>
+<tr><td><font size=2>Grant(6)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>595</font></td>
+    <td><font size=2>470</font></td>
+    <td><font size=2>595</font></td>
+    <td><font size=2>595</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Roger(10)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>550</font></td>
+    <td><font size=2>405</font></td>
+    <td><font size=2>550</font></td>
+    <td><font size=2>550</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>John(8)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>610</font></td>
+    <td><font size=2>730</font></td>
+    <td><font size=2>610</font></td>
+    <td><font size=2>610</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Sam(4)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>405</font></td>
+    <td><font size=2>550</font></td>
+    <td><font size=2>405</font></td>
+    <td><font size=2>405</font></td>
+    <td><font size=2>0</font></td>
 </table>
 </table>
 </body>
