--- a/roster.html
+++ b/roster.html
@@ -128,7 +128,7 @@
 <tr><td>ARI</td><td>James Conner           </td></tr>
 <tr><td>TEN</td><td>Tony Pollard           </td></tr>
 <tr><td>WAS</td><td>Austin Ekeler          </td></tr>
-<tr><td>JAX</td><td>Tank Bigsby            </td></tr>
+<tr><td>PHI</td><td>Tank Bigsby            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Amon-Ra St Brown       </td></tr>
 <tr><td>CHI</td><td>DJ Moore               </td></tr>
