--- a/strength.html
+++ b/strength.html
@@ -4,104 +4,104 @@
 </table>
 <table border=2>
 <tr><td><b>Position</b></td>
-    <td width=42><b>States</b></td>
-    <td width=42><b>Roger</b></td>
-    <td width=42><b>Mike</b></td>
-    <td width=42><b>Matthew</b></td>
-    <td width=42><b>Randy</b></td>
-    <td width=42><b>Rich</b></td>
-    <td width=42><b>Sam</b></td>
     <td width=42><b>Steven</b></td>
+    <td width=42><b>Mike</b></td>
+    <td width=42><b>States</b></td>
+    <td width=42><b>Sam</b></td>
+    <td width=42><b>Rich</b></td>
+    <td width=42><b>Grant</b></td>
+    <td width=42><b>Matthew</b></td>
     <td width=42><b>John</b></td>
-    <td width=42><b>Grant</b></td></tr>
+    <td width=42><b>Randy</b></td>
+    <td width=42><b>Roger</b></td></tr>
 <tr><td align='right'>QB</td>
-    <td align='right'>1935</td>
-    <td align='right'>3410</td>
-    <td align='right'>1535</td>
-    <td align='right'>1920</td>
-    <td align='right'>3275</td>
-    <td align='right'>2025</td>
-    <td align='right'>2245</td>
-    <td align='right'>2210</td>
-    <td align='right'>1915</td>
-    <td align='right'>3580</td></tr>
+    <td align='right'>180</td>
+    <td align='right'>200</td>
+    <td align='right'>110</td>
+    <td align='right'>0</td>
+    <td align='right'>310</td>
+    <td align='right'>75</td>
+    <td align='right'>25</td>
+    <td align='right'>235</td>
+    <td align='right'>50</td>
+    <td align='right'>270</td></tr>
 <tr><td align='right'>Best RB</td>
-    <td align='right'>545</td>
-    <td align='right'>2215</td>
-    <td align='right'>1430</td>
-    <td align='right'>2070</td>
-    <td align='right'>1665</td>
-    <td align='right'>1430</td>
-    <td align='right'>1710</td>
-    <td align='right'>1120</td>
-    <td align='right'>2375</td>
-    <td align='right'>2870</td></tr>
-<tr><td align='right'>Other RB's</td>
-    <td align='right'>740</td>
-    <td align='right'>1575</td>
-    <td align='right'>920</td>
-    <td align='right'>960</td>
-    <td align='right'>1510</td>
-    <td align='right'>1510</td>
-    <td align='right'>1005</td>
-    <td align='right'>1260</td>
-    <td align='right'>1230</td>
-    <td align='right'>2045</td></tr>
-<tr><td align='right'>Best WR</td>
-    <td align='right'>1160</td>
-    <td align='right'>930</td>
-    <td align='right'>640</td>
-    <td align='right'>795</td>
-    <td align='right'>695</td>
-    <td align='right'>720</td>
-    <td align='right'>2210</td>
-    <td align='right'>1580</td>
-    <td align='right'>1165</td>
-    <td align='right'>1210</td></tr>
-<tr><td align='right'>Other WR's</td>
-    <td align='right'>1235</td>
-    <td align='right'>1770</td>
-    <td align='right'>1035</td>
-    <td align='right'>1255</td>
-    <td align='right'>1250</td>
-    <td align='right'>750</td>
-    <td align='right'>1005</td>
-    <td align='right'>1610</td>
-    <td align='right'>1320</td>
-    <td align='right'>1070</td></tr>
-<tr><td align='right'>TE</td>
-    <td align='right'>905</td>
-    <td align='right'>665</td>
-    <td align='right'>670</td>
+    <td align='right'>25</td>
+    <td align='right'>175</td>
+    <td align='right'>100</td>
+    <td align='right'>130</td>
+    <td align='right'>75</td>
+    <td align='right'>80</td>
     <td align='right'>430</td>
-    <td align='right'>745</td>
-    <td align='right'>1040</td>
-    <td align='right'>605</td>
-    <td align='right'>1000</td>
-    <td align='right'>385</td>
-    <td align='right'>620</td></tr>
+    <td align='right'>100</td>
+    <td align='right'>50</td>
+    <td align='right'>75</td></tr>
+<tr><td align='right'>Other RB's</td>
+    <td align='right'>0</td>
+    <td align='right'>75</td>
+    <td align='right'>100</td>
+    <td align='right'>80</td>
+    <td align='right'>0</td>
+    <td align='right'>65</td>
+    <td align='right'>35</td>
+    <td align='right'>50</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td></tr>
+<tr><td align='right'>Best WR</td>
+    <td align='right'>60</td>
+    <td align='right'>100</td>
+    <td align='right'>110</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>130</td>
+    <td align='right'>0</td>
+    <td align='right'>145</td>
+    <td align='right'>75</td>
+    <td align='right'>65</td></tr>
+<tr><td align='right'>Other WR's</td>
+    <td align='right'>35</td>
+    <td align='right'>35</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>25</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>55</td>
+    <td align='right'>25</td></tr>
+<tr><td align='right'>TE</td>
+    <td align='right'>100</td>
+    <td align='right'>35</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>30</td>
+    <td align='right'>50</td>
+    <td align='right'>0</td>
+    <td align='right'>50</td>
+    <td align='right'>75</td></tr>
 <tr><td align='right'>K</td>
-    <td align='right'>1375</td>
-    <td align='right'>1430</td>
-    <td align='right'>2095</td>
-    <td align='right'>1145</td>
-    <td align='right'>1605</td>
-    <td align='right'>1185</td>
-    <td align='right'>1230</td>
-    <td align='right'>1465</td>
-    <td align='right'>1745</td>
-    <td align='right'>2035</td></tr>
+    <td align='right'>110</td>
+    <td align='right'>75</td>
+    <td align='right'>115</td>
+    <td align='right'>70</td>
+    <td align='right'>55</td>
+    <td align='right'>155</td>
+    <td align='right'>75</td>
+    <td align='right'>80</td>
+    <td align='right'>55</td>
+    <td align='right'>40</td></tr>
 <tr><td align='right'>R</td>
-    <td align='right'>1005</td>
-    <td align='right'>780</td>
-    <td align='right'>1440</td>
-    <td align='right'>2365</td>
-    <td align='right'>1265</td>
-    <td align='right'>495</td>
-    <td align='right'>1820</td>
-    <td align='right'>600</td>
-    <td align='right'>2470</td>
-    <td align='right'>1220</td></tr>
+    <td align='right'>50</td>
+    <td align='right'>35</td>
+    <td align='right'>80</td>
+    <td align='right'>125</td>
+    <td align='right'>30</td>
+    <td align='right'>35</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td></tr>
 <tr><td align='right'></td>
     <td align='right'></td>
     <td align='right'></td>
@@ -114,14 +114,14 @@
     <td align='right'></td>
     <td align='right'></td></tr>
 <tr><td align='right'>Total</td>
-    <td align='right'>8900</td>
-    <td align='right'>12775</td>
-    <td align='right'>9765</td>
-    <td align='right'>10940</td>
-    <td align='right'>12010</td>
-    <td align='right'>9155</td>
-    <td align='right'>11830</td>
-    <td align='right'>10845</td>
-    <td align='right'>12605</td>
-    <td align='right'>14650</td></tr>
+    <td align='right'>560</td>
+    <td align='right'>730</td>
+    <td align='right'>615</td>
+    <td align='right'>405</td>
+    <td align='right'>470</td>
+    <td align='right'>595</td>
+    <td align='right'>615</td>
+    <td align='right'>610</td>
+    <td align='right'>335</td>
+    <td align='right'>550</td></tr>
 </table>
