--- a/freeagt.html
+++ b/freeagt.html
@@ -1,119 +1,82 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>Final 2024 Free Agent Leaderboard</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2025 Free Agent Leaderboard<br>(Through week 1)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Aaron Rodgers          </td><td><font size=3>1835</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Kirk Cousins           </td><td><font size=3>1590</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Bryce Young            </td><td><font size=3>1580</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Derek Carr             </td><td><font size=3>1275</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Jameis Winston         </td><td><font size=3>1195</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Will Levis             </td><td><font size=3>1080</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Dak Prescott           </td><td><font size=3> 960</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Trevor Lawrence        </td><td><font size=3> 940</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Justin Fields          </td><td><font size=3> 735</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Gardner Minshew        </td><td><font size=3> 725</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Mason Rudolph          </td><td><font size=3> 715</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Drew Lock              </td><td><font size=3> 710</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Aidan O'Connell        </td><td><font size=3> 710</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 675</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Mac Jones              </td><td><font size=3> 650</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Aaron Rodgers          </td><td><font size=3> 210</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Michael Penix          </td><td><font size=3> 195</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Geno Smith             </td><td><font size=3>  90</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Matthew Stafford       </td><td><font size=3>  85</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Bryce Young            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Joe Flacco             </td><td><font size=3>  70</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Drake Maye             </td><td><font size=3>  70</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Spencer Rattler        </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
-<tr><td><font size=3>Jordan Mason           </td><td><font size=3> 550</td></tr>
-<tr><td><font size=3>Dameon Pierce          </td><td><font size=3> 520</td></tr>
-<tr><td><font size=3>Ameer Abdullah         </td><td><font size=3> 430</td></tr>
-<tr><td><font size=3>Austin Ekeler          </td><td><font size=3> 420</td></tr>
-<tr><td><font size=3>Jeremy McNichols       </td><td><font size=3> 390</td></tr>
-<tr><td><font size=3>Roschon Johnson        </td><td><font size=3> 300</td></tr>
-<tr><td><font size=3>Sean Tucker            </td><td><font size=3> 285</td></tr>
-<tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3> 275</td></tr>
-<tr><td><font size=3>Antonio Gibson         </td><td><font size=3> 260</td></tr>
-<tr><td><font size=3>Miles Sanders          </td><td><font size=3> 255</td></tr>
-<tr><td><font size=3>DeeJay Dallas          </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>Emari Demercado        </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>Tony Jones             </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>Chris Rodriguez        </td><td><font size=3> 220</td></tr>
-<tr><td><font size=3>Tyler Goodson          </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Miles Sanders          </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Rashod Bateman         </td><td><font size=3>1070</td></tr>
-<tr><td><font size=3>Alec Pierce            </td><td><font size=3> 835</td></tr>
-<tr><td><font size=3>Jauan Jennings         </td><td><font size=3> 795</td></tr>
-<tr><td><font size=3>Calvin Austin          </td><td><font size=3> 790</td></tr>
-<tr><td><font size=3>Marvin Mims            </td><td><font size=3> 755</td></tr>
-<tr><td><font size=3>KaVontae Turpin        </td><td><font size=3> 740</td></tr>
-<tr><td><font size=3>Keenan Allen           </td><td><font size=3> 735</td></tr>
-<tr><td><font size=3>Jakobi Meyers          </td><td><font size=3> 720</td></tr>
-<tr><td><font size=3>Allen Lazard           </td><td><font size=3> 680</td></tr>
-<tr><td><font size=3>Adam Thielen           </td><td><font size=3> 675</td></tr>
-<tr><td><font size=3>Demarcus Robinson      </td><td><font size=3> 580</td></tr>
-<tr><td><font size=3>Jalen Nailor           </td><td><font size=3> 575</td></tr>
-<tr><td><font size=3>Jalen Tolbert          </td><td><font size=3> 575</td></tr>
-<tr><td><font size=3>Marquez ValdesScantling</td><td><font size=3> 545</td></tr>
-<tr><td><font size=3>Romeo Doubs            </td><td><font size=3> 540</td></tr>
+<tr><td><font size=3>Quentin Johnston       </td><td><font size=3> 185</td></tr>
+<tr><td><font size=3>Michael Pittman        </td><td><font size=3> 115</td></tr>
+<tr><td><font size=3>Calvin Austin          </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>Keenan Allen           </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>DeAndre Hopkins        </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Ben Skowronek          </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Jayden Reed            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Cedric Tillman         </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Tre Tucker             </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Kayshon Boutte         </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>DeMario Douglas        </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Marquise Brown         </td><td><font size=3>  45</td></tr>
+<tr><td><font size=3>Romeo Doubs            </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>Josh Palmer            </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>Dyami Brown            </td><td><font size=3>  25</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Zach Ertz              </td><td><font size=3> 540</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Noah Gray              </td><td><font size=3> 435</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Mike Gesicki           </td><td><font size=3> 425</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Foster Moreau          </td><td><font size=3> 400</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Tyler Conklin          </td><td><font size=3> 375</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Chig Okonkwo           </td><td><font size=3> 330</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Dallas Goedert         </td><td><font size=3> 320</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Austin Hooper          </td><td><font size=3> 305</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 280</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Dalton Schultz         </td><td><font size=3> 260</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Will Dissly            </td><td><font size=3> 230</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Josh Oliver            </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Noah Fant              </td><td><font size=3> 220</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Nate Adkins            </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Nick Vannett           </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Davis Allen            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Zach Ertz              </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Hunter Long            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Noah Fant              </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Jonnu Smith            </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Jake Tonges            </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Juwan Johnson          </td><td><font size=3>  35</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Hunter Henry           </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Tyler Conklin          </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Brenton Strange        </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Julian Hill            </td><td><font size=3>   5</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Daniel Carlson         </td><td><font size=3>1335</td></tr>
-<tr><td><font size=3>Blake Grupe            </td><td><font size=3>1210</td></tr>
-<tr><td><font size=3>Matt Gay               </td><td><font size=3>1200</td></tr>
-<tr><td><font size=3>Chad Ryland            </td><td><font size=3>1135</td></tr>
-<tr><td><font size=3>Joey Slye              </td><td><font size=3>1125</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3>1030</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3>1005</td></tr>
-<tr><td><font size=3>Austin Seibert         </td><td><font size=3>1000</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 875</td></tr>
-<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 835</td></tr>
-<tr><td><font size=3>Harrison Butker        </td><td><font size=3> 815</td></tr>
-<tr><td><font size=3>Evan McPherson         </td><td><font size=3> 740</td></tr>
-<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 590</td></tr>
-<tr><td><font size=3>Anders Carlson         </td><td><font size=3> 585</td></tr>
-<tr><td><font size=3>Matthew Wright         </td><td><font size=3> 525</td></tr>
+<tr><td><font size=3>Joey Slye              </td><td><font size=3> 165</td></tr>
+<tr><td><font size=3>Spencer Shrader        </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 115</td></tr>
+<tr><td><font size=3>Chad Ryland            </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>Matt Prater            </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Will Reichard          </td><td><font size=3>  95</td></tr>
+<tr><td><font size=3>Younghoe Koo           </td><td><font size=3>  85</td></tr>
+<tr><td><font size=3>Jason Myers            </td><td><font size=3>  80</td></tr>
+<tr><td><font size=3>Brandon McManus        </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3>  60</td></tr>
+<tr><td><font size=3>Blake Grupe            </td><td><font size=3>  55</td></tr>
+<tr><td><font size=3>Andre Szmyt            </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Jake Moody             </td><td><font size=3>  40</td></tr>
+<tr><td><font size=3>Joshua Karty           </td><td><font size=3>  10</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
-<tr><td><font size=3>Brayden Narveson       </td><td><font size=3> 485</td></tr>
-<tr><td><font size=3>Jalen Coker            </td><td><font size=3> 350</td></tr>
-<tr><td><font size=3>Devaughn Vele          </td><td><font size=3> 330</td></tr>
-<tr><td><font size=3>Braelon Allen          </td><td><font size=3> 300</td></tr>
-<tr><td><font size=3>AJ Barner              </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>Joe Milton             </td><td><font size=3> 185</td></tr>
-<tr><td><font size=3>Troy Franklin          </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>Theo Johnson           </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>Malik Washington       </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Ja'Tavion Sanders      </td><td><font size=3> 120</td></tr>
-<tr><td><font size=3>Jordan Whittington     </td><td><font size=3> 110</td></tr>
-<tr><td><font size=3>Ja'Lynn Polk           </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Devontez Walker        </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Bub Means              </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Ainias Smith           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Raheim Sanders         </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Harold Fannin          </td><td><font size=3>  30</td></tr>
 </table>
 </td></tr></table>
