--- a/roster.html
+++ b/roster.html
@@ -78,9 +78,9 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>Evan Engram            </td></tr>
 <tr><td>BAL</td><td>Isaiah Likely          </td></tr>
+<tr><td>WAS</td><td>Zach Ertz              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Brandon Aubrey         </td></tr>
-<tr><td>JAX</td><td>Cam Little             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>Kaleb Johnson          </td></tr>
 <tr><td> NE</td><td>Andy Borregales        </td></tr>
