--- a/roster.html
+++ b/roster.html
@@ -199,9 +199,9 @@
 <tr><td> NO</td><td>Tyler Shough           </td></tr>
 <tr><td>DAL</td><td>Jaydon Blue            </td></tr>
 <tr><td>CLE</td><td>Shedeur Sanders        </td></tr>
-<tr><td>SEA</td><td>Jalen Milroe           </td></tr>
 <tr><td>PIT</td><td>Ben Sauls              </td></tr>
 <tr><td>IND</td><td>DJ Giddens             </td></tr>
+<tr><td>CLE</td><td>Harold Fannin          </td></tr>
 </table>
 </td>
 <td valign=top>
