--- a/pickups.html
+++ b/pickups.html
@@ -198,8 +198,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Harold Fannin/Jalen Milroe</td>
+<td width=50>9/11</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
