--- a/week2.html
+++ b/week2.html
@@ -84,8 +84,8 @@
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Worthy</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Samuel</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Fannin</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Dicker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Blue</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
