--- a/week2.html
+++ b/week2.html
@@ -37,10 +37,10 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (2)</b></font></td></tr>
 <tr><td>Mayfield</td>      <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Irving</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Thomas</td>        <td></td><td align=right>0</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>McConkey</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Thomas</td>        <td></td><td align=right>0</td></tr>
 <tr><td>LaPorta</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>TWarren</td>       <td></td><td align=right>0</td></tr>
@@ -71,7 +71,7 @@
 <tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Collins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Hockensom</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Lutz</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Loop</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -143,7 +143,7 @@
 <tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Hampton</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Flowers</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kincaid</td>       <td></td><td align=right>0</td></tr>
 <tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Hunter</td>        <td></td><td align=right>0</td></tr>
