--- a/pickups.html
+++ b/pickups.html
@@ -139,8 +139,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Quentin Johnston/Tahj Brooks</td>
+<td width=50>9/16</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -210,8 +210,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Daniel Jones/Rashod Bateman</td>
+<td width=50>9/16</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -262,8 +262,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jake Browning/Kyle Williams</td>
+<td width=50>9/16</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -327,6 +327,12 @@
 <tr><td width=50>9/7</td>
 <td width=600>
 Free Pickups:<br>
-Rich - Chase McLaughlin/Tyler Bass (9/7)
+Rich - Chase McLaughlin/Tyler Bass (9/7)<br>
+Rich - Rachaad White/Austin Ekeler (9/16)
+</td></tr>
+<tr><td width=50>9/16</td>
+<td width=600>
+Sam - Justin Herbert<br>
+Randy - Travis Etienne
 </td></tr>
 </table>
