--- a/roster.html
+++ b/roster.html
@@ -94,11 +94,11 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Sam (4)</b></font></td></tr>
 <tr><td>DAL</td><td>Dak Prescott           </td></tr>
+<tr><td>LAC</td><td>Justin Herbert         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Saquon Barkley         </td></tr>
 <tr><td>LAR</td><td>Kyren Williams         </td></tr>
 <tr><td>PIT</td><td>Jaylen Warren          </td></tr>
-<tr><td>JAX</td><td>Travis Etienne         </td></tr>
 <tr><td>PHI</td><td>Will Shipley           </td></tr>
 <tr><td>LAR</td><td>Blake Corum            </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -127,8 +127,8 @@
 <tr><td>DET</td><td>Jahmyr Gibbs           </td></tr>
 <tr><td>ARI</td><td>James Conner           </td></tr>
 <tr><td>TEN</td><td>Tony Pollard           </td></tr>
-<tr><td>WAS</td><td>Austin Ekeler          </td></tr>
 <tr><td>PHI</td><td>Tank Bigsby            </td></tr>
+<tr><td> TB</td><td>Rachaad White          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Amon-Ra St Brown       </td></tr>
 <tr><td>CHI</td><td>DJ Moore               </td></tr>
@@ -162,6 +162,7 @@
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
 <tr><td>DEN</td><td>Courtland Sutton       </td></tr>
 <tr><td> SF</td><td>Ricky Pearsall         </td></tr>
+<tr><td>LAC</td><td>Quentin Johnston       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Trey McBride           </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -171,7 +172,6 @@
 <tr><td>DEN</td><td>RJ Harvey              </td></tr>
 <tr><td>NYG</td><td>Cam Skattebo           </td></tr>
 <tr><td>NYJ</td><td>Mason Taylor           </td></tr>
-<tr><td>CIN</td><td>Tahj Brooks            </td></tr>
 </table>
 </td>
 </tr>
@@ -181,6 +181,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Matthew (7)</b></font></td></tr>
 <tr><td>CIN</td><td>Joe Burrow             </td></tr>
 <tr><td>DET</td><td>Jared Goff             </td></tr>
+<tr><td>IND</td><td>Daniel Jones           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Derrick Henry          </td></tr>
 <tr><td>IND</td><td>Jonathan Taylor        </td></tr>
@@ -190,7 +191,6 @@
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
 <tr><td> KC</td><td>Xavier Worthy          </td></tr>
 <tr><td>WAS</td><td>Deebo Samuel           </td></tr>
-<tr><td>BAL</td><td>Rashod Bateman         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -235,15 +235,16 @@
 <td valign=top>
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Randy (9)</b></font></td></tr>
-<tr><td>LAC</td><td>Justin Herbert         </td></tr>
 <tr><td>HOU</td><td>CJ Stroud              </td></tr>
 <tr><td>JAX</td><td>Trevor Lawrence        </td></tr>
+<tr><td>CIN</td><td>Jake Browning          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYJ</td><td>Breece Hall            </td></tr>
 <tr><td> KC</td><td>Isiah Pacheco          </td></tr>
 <tr><td>NYG</td><td>Tyrone Tracy           </td></tr>
 <tr><td>NYJ</td><td>Braelon Allen          </td></tr>
 <tr><td> NE</td><td>Rhamondre Stevenson    </td></tr>
+<tr><td>JAX</td><td>Travis Etienne         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Justin Jefferson       </td></tr>
 <tr><td>DAL</td><td>CeeDee Lamb            </td></tr>
@@ -257,7 +258,6 @@
 <tr><td> NE</td><td>TreVeyon Henderson     </td></tr>
 <tr><td>NYG</td><td>Jaxson Dart            </td></tr>
 <tr><td>CHI</td><td>Colston Loveland       </td></tr>
-<tr><td> NE</td><td>Kyle Williams          </td></tr>
 </table>
 </td>
 </tr>
