--- a/week3.html
+++ b/week3.html
@@ -125,7 +125,7 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (7)</b></font></td></tr>
-<tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
+<tr><td>DJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
@@ -141,12 +141,12 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (10)</b></font></td></tr>
 <tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Hampton</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
+<tr><td>RDavis</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Flowers</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kincaid</td>       <td></td><td align=right>0</td></tr>
-<tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Hunter</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
+<tr><td>CroskeyMerritt</td><td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 <td></td><td></td>
