--- a/roster.html
+++ b/roster.html
@@ -287,7 +287,7 @@
 <tr><td>JAX</td><td>Travis Hunter          </td></tr>
 <tr><td>WAS</td><td>Jacory Croskey-Merritt </td></tr>
 <tr><td>CLE</td><td>Quinshon Judkins       </td></tr>
-<tr><td>SEA</td><td>Tory Horton            </td></tr>
+<tr><td> KC</td><td>Brashard Smith         </td></tr>
 </table>
 </td>
 <td>
