--- a/roster.html
+++ b/roster.html
@@ -156,7 +156,7 @@
 <tr><td> GB</td><td>Josh Jacobs            </td></tr>
 <tr><td>HOU</td><td>Joe Mixon              </td></tr>
 <tr><td>BAL</td><td>Keaton Mitchell        </td></tr>
-<tr><td>LAC</td><td>Najee Harris           </td></tr>
+<tr><td>TEN</td><td>Tyjae Spears           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Drake London           </td></tr>
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
@@ -179,7 +179,6 @@
 <td valign=top>
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Matthew (7)</b></font></td></tr>
-<tr><td>CIN</td><td>Joe Burrow             </td></tr>
 <tr><td>DET</td><td>Jared Goff             </td></tr>
 <tr><td>IND</td><td>Daniel Jones           </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -191,6 +190,7 @@
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
 <tr><td> KC</td><td>Xavier Worthy          </td></tr>
 <tr><td>WAS</td><td>Deebo Samuel           </td></tr>
+<tr><td>LAC</td><td>Keenan Allen           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -238,10 +238,10 @@
 <tr><td>HOU</td><td>CJ Stroud              </td></tr>
 <tr><td>JAX</td><td>Trevor Lawrence        </td></tr>
 <tr><td>CIN</td><td>Jake Browning          </td></tr>
+<tr><td> NE</td><td>Drake Maye             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYJ</td><td>Breece Hall            </td></tr>
 <tr><td> KC</td><td>Isiah Pacheco          </td></tr>
-<tr><td>NYG</td><td>Tyrone Tracy           </td></tr>
 <tr><td>NYJ</td><td>Braelon Allen          </td></tr>
 <tr><td> NE</td><td>Rhamondre Stevenson    </td></tr>
 <tr><td>JAX</td><td>Travis Etienne         </td></tr>
