--- a/pickups.html
+++ b/pickups.html
@@ -274,8 +274,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Drake Maye/Tyrone Tracy</td>
+<td width=50>9/23</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -328,7 +328,9 @@
 <td width=600>
 Free Pickups:<br>
 Rich - Chase McLaughlin/Tyler Bass (9/7)<br>
-Rich - Rachaad White/Austin Ekeler (9/16)
+Rich - Rachaad White/Austin Ekeler (9/16)<br>
+Matthew - Keenan Allen/Joe Burrow (9/24)<br>
+Grant - Tyjae Spears/Najee Harris (9/24)
 </td></tr>
 <tr><td width=50>9/16</td>
 <td width=600>
