--- a/week4.html
+++ b/week4.html
@@ -67,10 +67,10 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
 <tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Harrison</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Borregales</td>    <td></td><td align=right>0</td></tr>
@@ -82,12 +82,12 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (10)</b></font></td></tr>
 <tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
-<tr><td>RDavis</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Flowers</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Judkins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Addison</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kincaid</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
-<tr><td>CroskeyMerritt</td><td></td><td align=right>0</td></tr>
+<tr><td>Hampton</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
