--- a/roster.html
+++ b/roster.html
@@ -51,7 +51,7 @@
 <tr><td>BUF</td><td>Keon Coleman           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Sam LaPorta            </td></tr>
-<tr><td>MIA</td><td>Darren Waller          </td></tr>
+<tr><td> NE</td><td>Hunter Henry           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Jake Elliott           </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -215,7 +215,6 @@
 <tr><td>CAR</td><td>Chuba Hubbard          </td></tr>
 <tr><td>SEA</td><td>Zach Charbonnet        </td></tr>
 <tr><td>ARI</td><td>Trey Benson            </td></tr>
-<tr><td>CAR</td><td>Rico Dowdle            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>AJ Brown               </td></tr>
 <tr><td>NYJ</td><td>Garrett Wilson         </td></tr>
@@ -225,6 +224,7 @@
 <tr><td>CLE</td><td>David Njoku            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Graham Gano            </td></tr>
+<tr><td>TEN</td><td>Joey Slye              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>Cam Ward               </td></tr>
 <tr><td>MIA</td><td>Ollie Gordon           </td></tr>
