--- a/week4.html
+++ b/week4.html
@@ -9,7 +9,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (1)</b></font></td></tr>
 <tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Mason</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Nabers</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Smith-Njigba</td>  <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
@@ -25,9 +25,9 @@
 <tr><td>CBrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hubbard</td>       <td></td><td align=right>0</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Njoku</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Gano</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Ward</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -36,12 +36,12 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (2)</b></font></td></tr>
-<tr><td>Mayfield</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Irving</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Tagovailoa</td>    <td></td><td align=right>0</td></tr>
 <tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Irving</td>        <td></td><td align=right>0</td></tr>
 <tr><td>McConkey</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Thomas</td>        <td></td><td align=right>0</td></tr>
-<tr><td>LaPorta</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>TWarren</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
