--- a/pickups.html
+++ b/pickups.html
@@ -11,8 +11,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Hunter Henry/Darren Waller</td>
+<td width=50>9/28</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -215,8 +215,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Joey Slye/Rico Dowdle</td>
+<td width=50>9/27</td>
 </tr></table></td>
 </tr>
 <tr>
