--- a/week4.html
+++ b/week4.html
@@ -53,11 +53,11 @@
 <tr><td>Nix</td>           <td></td><td align=right>0</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Pearsall</td>      <td></td><td align=right>0</td></tr>
+<tr><td>London</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
 <tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Boswell</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Skattebo</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Harvey</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
