--- a/week4.html
+++ b/week4.html
@@ -128,7 +128,7 @@
 <tr><td>DJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>KAllen</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Samuel</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fannin</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Dicker</td>        <td></td><td align=right>0</td></tr>
