--- a/thousand.html
+++ b/thousand.html
@@ -531,6 +531,12 @@
     <td>1120</td>
     <td>Mike</td>
     <td>450</td></tr>
+<tr><td>2025</td>
+    <td>Week 4</td>
+    <td>Roger Bakos</td>
+    <td>1120</td>
+    <td>States</td>
+    <td>455</td></tr>
 <tr><td>2016</td>
     <td>Week 4</td>
     <td>Steven Cohen</td>
@@ -915,6 +921,12 @@
     <td>1040</td>
     <td>States</td>
     <td>415</td></tr>
+<tr><td>2025</td>
+    <td>Week 4</td>
+    <td>Grant Mydland</td>
+    <td>1040</td>
+    <td>Mike</td>
+    <td>800</td></tr>
 <tr><td>2005</td>
     <td>Week 14</td>
     <td>John Heinzelmann</td>
