--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 <a href="week1.html"><b>1</b></a>
 <a href="week2.html"><b>2</b></a>
 <a href="week3.html"><b>3</b></a>
-<a href="week4.html"><b>4P</b></a><br>
+<a href="week4.html"><b>4</b></a>
+<a href="week5.html"><b>5P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -62,42 +63,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Rich(5)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>2180</font></td>
-    <td><font size=2>1220</font></td>
+    <td><font size=2>2765</font></td>
+    <td><font size=2>1635</font></td>
     <td><font size=2>945</font></td>
     <td><font size=2>470</font></td>
     <td><font size=2>1</font></td>
-<tr><td><font size=2>Matthew(7)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1840</font></td>
-    <td><font size=2>1720</font></td>
-    <td><font size=2>735</font></td>
-    <td><font size=2>490</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1685</font></td>
-    <td><font size=2>2015</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2140</font></td>
+    <td><font size=2>3135</font></td>
     <td><font size=2>890</font></td>
     <td><font size=2>180</font></td>
     <td><font size=2>1</font></td>
-<tr><td><font size=2>Randy(9)</font></td>
-    <td><font size=2>1</font></td>
+<tr><td><font size=2>Matthew(7)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>945</font></td>
-    <td><font size=2>1310</font></td>
-    <td><font size=2>345</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2125</font></td>
+    <td><font size=2>2635</font></td>
+    <td><font size=2>735</font></td>
+    <td><font size=2>285</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Randy(9)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>1860</font></td>
+    <td><font size=2>1595</font></td>
+    <td><font size=2>915</font></td>
     <td><font size=2>265</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Steven(1)</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>1905</font></td>
-    <td><font size=2>2125</font></td>
+    <td><font size=2>2600</font></td>
+    <td><font size=2>2580</font></td>
     <td><font size=2>735</font></td>
     <td><font size=2>560</font></td>
     <td><font size=2>0</font></td>
@@ -110,42 +111,42 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Grant(6)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1755</font></td>
-    <td><font size=2>1240</font></td>
-    <td><font size=2>625</font></td>
+    <td><font size=2>2795</font></td>
+    <td><font size=2>2040</font></td>
+    <td><font size=2>1040</font></td>
     <td><font size=2>535</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Roger(10)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>1750</font></td>
-    <td><font size=2>1605</font></td>
-    <td><font size=2>670</font></td>
+    <td><font size=2>2870</font></td>
+    <td><font size=2>2060</font></td>
+    <td><font size=2>1120</font></td>
     <td><font size=2>530</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Sam(4)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1655</font></td>
-    <td><font size=2>1650</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2070</font></td>
+    <td><font size=2>2235</font></td>
     <td><font size=2>630</font></td>
     <td><font size=2>405</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Mike(2)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>1335</font></td>
-    <td><font size=2>1640</font></td>
-    <td><font size=2>730</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>2135</font></td>
+    <td><font size=2>2680</font></td>
+    <td><font size=2>800</font></td>
     <td><font size=2>160</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>John(8)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>1500</font></td>
-    <td><font size=2>2025</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>1955</font></td>
+    <td><font size=2>2720</font></td>
     <td><font size=2>610</font></td>
     <td><font size=2>425</font></td>
     <td><font size=2>0</font></td>
