--- a/pickups.html
+++ b/pickups.html
@@ -75,8 +75,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Dallas Goedert/Isaac TeSlaa</td>
+<td width=50>9/30</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -134,8 +134,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Bryce Young/Devin Neal</td>
+<td width=50>10/1</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -330,7 +330,9 @@ Free Pickups:<br>
 Rich - Chase McLaughlin/Tyler Bass (9/7)<br>
 Rich - Rachaad White/Austin Ekeler (9/16)<br>
 Matthew - Keenan Allen/Joe Burrow (9/24)<br>
-Grant - Tyjae Spears/Najee Harris (9/24)
+Grant - Tyjae Spears/Najee Harris (9/24)<br>
+Steven - Michael Pittman/Malik Nabers (9/30)<br>
+Rich - Zavier Scott/James Conner (10/1)
 </td></tr>
 <tr><td width=50>9/16</td>
 <td width=600>
