--- a/roster.html
+++ b/roster.html
@@ -15,10 +15,10 @@
 <tr><td>MIN</td><td>Jordan Mason           </td></tr>
 <tr><td> SF</td><td>Brian Robinson         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>NYG</td><td>Malik Nabers           </td></tr>
 <tr><td>SEA</td><td>Jaxon Smith-Njigba     </td></tr>
 <tr><td>TEN</td><td>Calvin Ridley          </td></tr>
 <tr><td> LV</td><td>Jakobi Meyers          </td></tr>
+<tr><td>IND</td><td>Michael Pittman        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -109,13 +109,13 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>TJ Hockenson           </td></tr>
 <tr><td>ATL</td><td>Kyle Pitts             </td></tr>
+<tr><td>PHI</td><td>Dallas Goedert         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>Wil Lutz               </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Tyler Loop             </td></tr>
 <tr><td> TB</td><td>Emeka Egbuka           </td></tr>
 <tr><td>HOU</td><td>Jayden Higgins         </td></tr>
-<tr><td>DET</td><td>Isaac TeSlaa           </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -123,12 +123,13 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Rich (5)</b></font></td></tr>
 <tr><td>BAL</td><td>Lamar Jackson          </td></tr>
 <tr><td> GB</td><td>Jordan Love            </td></tr>
+<tr><td>CAR</td><td>Bryce Young            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Jahmyr Gibbs           </td></tr>
-<tr><td>ARI</td><td>James Conner           </td></tr>
 <tr><td>TEN</td><td>Tony Pollard           </td></tr>
 <tr><td>PHI</td><td>Tank Bigsby            </td></tr>
 <tr><td> TB</td><td>Rachaad White          </td></tr>
+<tr><td>MIN</td><td>Zavier Scott           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Amon-Ra St Brown       </td></tr>
 <tr><td>CHI</td><td>DJ Moore               </td></tr>
@@ -143,7 +144,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>Tetairoa McMillan      </td></tr>
 <tr><td>TEN</td><td>Elic Ayomanor          </td></tr>
-<tr><td> NO</td><td>Devin Neal             </td></tr>
 </table>
 </td>
 <td valign=top>
