--- a/week5.html
+++ b/week5.html
@@ -10,8 +10,8 @@
 <tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Mason</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Nabers</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Smith-Njigba</td>  <td></td><td align=right>0</td></tr>
+<tr><td>Meyers</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Jeanty</td>        <td></td><td align=right>0</td></tr>
@@ -113,7 +113,7 @@
 <tr><td>BHall</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Odunze</td>        <td></td><td align=right>0</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Bowers</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Bates</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Dart</td>          <td></td><td align=right>0</td></tr>
