--- a/pickups.html
+++ b/pickups.html
@@ -279,8 +279,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Matthew Stafford/JJ McCarthy</td>
+<td width=50>10/1</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -332,7 +332,8 @@ Rich - Rachaad White/Austin Ekeler (9/16)<br>
 Matthew - Keenan Allen/Joe Burrow (9/24)<br>
 Grant - Tyjae Spears/Najee Harris (9/24)<br>
 Steven - Michael Pittman/Malik Nabers (9/30)<br>
-Rich - Zavier Scott/James Conner (10/1)
+Rich - Zavier Scott/James Conner (10/1)<br>
+Sam - Spencer Shrader/Tyreek Hill (10/1)
 </td></tr>
 <tr><td width=50>9/16</td>
 <td width=600>
