--- a/roster.html
+++ b/roster.html
@@ -103,7 +103,6 @@
 <tr><td>LAR</td><td>Blake Corum            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>Nico Collins           </td></tr>
-<tr><td>MIA</td><td>Tyreek Hill            </td></tr>
 <tr><td>PIT</td><td>DK Metcalf             </td></tr>
 <tr><td> NO</td><td>Chris Olave            </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -112,6 +111,7 @@
 <tr><td>PHI</td><td>Dallas Goedert         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>Wil Lutz               </td></tr>
+<tr><td>IND</td><td>Spencer Shrader        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Tyler Loop             </td></tr>
 <tr><td> TB</td><td>Emeka Egbuka           </td></tr>
@@ -266,7 +266,7 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Roger (10)</b></font></td></tr>
 <tr><td>BUF</td><td>Josh Allen             </td></tr>
-<tr><td>MIN</td><td>JJ McCarthy            </td></tr>
+<tr><td>LAR</td><td>Matthew Stafford       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>James Cook             </td></tr>
 <tr><td>BUF</td><td>Ray Davis              </td></tr>
