--- a/week5.html
+++ b/week5.html
@@ -11,7 +11,7 @@
 <tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Mason</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Smith-Njigba</td>  <td></td><td align=right>0</td></tr>
-<tr><td>Meyers</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Pittman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Jeanty</td>        <td></td><td align=right>0</td></tr>
