--- a/roster.html
+++ b/roster.html
@@ -41,8 +41,8 @@
 <tr><td>ATL</td><td>Bijan Robinson         </td></tr>
 <tr><td> TB</td><td>Bucky Irving           </td></tr>
 <tr><td>DAL</td><td>Javonte Williams       </td></tr>
-<tr><td>CLE</td><td>Jerome Ford            </td></tr>
 <tr><td>ATL</td><td>Tyler Allgeier         </td></tr>
+<tr><td> KC</td><td>Kareem Hunt            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>JAX</td><td>Brian Thomas           </td></tr>
 <tr><td>LAC</td><td>Ladd McConkey          </td></tr>
