--- a/pickups.html
+++ b/pickups.html
@@ -333,7 +333,8 @@ Matthew - Keenan Allen/Joe Burrow (9/24)<br>
 Grant - Tyjae Spears/Najee Harris (9/24)<br>
 Steven - Michael Pittman/Malik Nabers (9/30)<br>
 Rich - Zavier Scott/James Conner (10/1)<br>
-Sam - Spencer Shrader/Tyreek Hill (10/1)
+Sam - Spencer Shrader/Tyreek Hill (10/1)<br>
+Randy - Jake Ferguson/Braelon Allen (10/4)
 </td></tr>
 <tr><td width=50>9/16</td>
 <td width=600>
