--- a/roster.html
+++ b/roster.html
@@ -242,7 +242,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYJ</td><td>Breece Hall            </td></tr>
 <tr><td> KC</td><td>Isiah Pacheco          </td></tr>
-<tr><td>NYJ</td><td>Braelon Allen          </td></tr>
 <tr><td> NE</td><td>Rhamondre Stevenson    </td></tr>
 <tr><td>JAX</td><td>Travis Etienne         </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -252,6 +251,7 @@
 <tr><td>CHI</td><td>Rome Odunze            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Brock Bowers           </td></tr>
+<tr><td>DAL</td><td>Jake Ferguson          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Jake Bates             </td></tr>
 <tr><td height=9></td><td></td></tr>
