--- a/week6.html
+++ b/week6.html
@@ -9,12 +9,12 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (1)</b></font></td></tr>
 <tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Mason</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Jeanty</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Smith-Njigba</td>  <td></td><td align=right>0</td></tr>
 <tr><td>Pittman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Jeanty</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Fitzgerald</td>    <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -24,7 +24,7 @@
 <tr><td>Maye</td>          <td></td><td align=right>0</td></tr>
 <tr><td>BHall</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Odunze</td>        <td></td><td align=right>0</td></tr>
 <tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Ferguson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Bates</td>         <td></td><td align=right>0</td></tr>
@@ -54,10 +54,10 @@
 <tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Judkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Shakir</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kincaid</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Hampton</td>       <td></td><td align=right>0</td></tr>
+<tr><td>CroskeyMerritt</td><td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -82,12 +82,12 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (6)</b></font></td></tr>
 <tr><td>Nix</td>           <td></td><td align=right>0</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Skattebo</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Johnston</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
+<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Harvey</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Boswell</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Skattebo</td>      <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -95,13 +95,13 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (4)</b></font></td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
 <tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Collins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Egbuka</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Shrader</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Lutz</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Loop</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -109,11 +109,11 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (8)</b></font></td></tr>
-<tr><td>Fields</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Marks</td>         <td></td><td align=right>0</td></tr>
-<tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Dowdle</td>        <td></td><td align=right>0</td></tr>
+<tr><td>CBrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Njoku</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Ward</td>          <td></td><td align=right>0</td></tr>
