--- a/pickups.html
+++ b/pickups.html
@@ -334,7 +334,9 @@ Grant - Tyjae Spears/Najee Harris (9/24)<br>
 Steven - Michael Pittman/Malik Nabers (9/30)<br>
 Rich - Zavier Scott/James Conner (10/1)<br>
 Sam - Spencer Shrader/Tyreek Hill (10/1)<br>
-Randy - Jake Ferguson/Braelon Allen (10/4)
+Randy - Jake Ferguson/Braelon Allen (10/4)<br>
+John - Rico Dowdle/Trey Benson (10/7)<br>
+Sam - Michael Carter/Spencer Shrader (10/7)
 </td></tr>
 <tr><td width=50>9/16</td>
 <td width=600>
