--- a/roster.html
+++ b/roster.html
@@ -101,6 +101,7 @@
 <tr><td>PIT</td><td>Jaylen Warren          </td></tr>
 <tr><td>PHI</td><td>Will Shipley           </td></tr>
 <tr><td>LAR</td><td>Blake Corum            </td></tr>
+<tr><td>ARI</td><td>Michael Carter         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>Nico Collins           </td></tr>
 <tr><td>PIT</td><td>DK Metcalf             </td></tr>
@@ -111,7 +112,6 @@
 <tr><td>PHI</td><td>Dallas Goedert         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>Wil Lutz               </td></tr>
-<tr><td>IND</td><td>Spencer Shrader        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Tyler Loop             </td></tr>
 <tr><td> TB</td><td>Emeka Egbuka           </td></tr>
@@ -214,7 +214,7 @@
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td>CAR</td><td>Chuba Hubbard          </td></tr>
 <tr><td>SEA</td><td>Zach Charbonnet        </td></tr>
-<tr><td>ARI</td><td>Trey Benson            </td></tr>
+<tr><td>CAR</td><td>Rico Dowdle            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>AJ Brown               </td></tr>
 <tr><td>NYJ</td><td>Garrett Wilson         </td></tr>
