--- a/pickups.html
+++ b/pickups.html
@@ -336,7 +336,8 @@ Rich - Zavier Scott/James Conner (10/1)<br>
 Sam - Spencer Shrader/Tyreek Hill (10/1)<br>
 Randy - Jake Ferguson/Braelon Allen (10/4)<br>
 John - Rico Dowdle/Trey Benson (10/7)<br>
-Sam - Michael Carter/Spencer Shrader (10/7)
+Sam - Michael Carter/Spencer Shrader (10/7)<br>
+John - Jason Myers/Graham Gano (10/10)
 </td></tr>
 <tr><td width=50>9/16</td>
 <td width=600>
