--- a/roster.html
+++ b/roster.html
@@ -223,8 +223,8 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>David Njoku            </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>NYG</td><td>Graham Gano            </td></tr>
 <tr><td>TEN</td><td>Joey Slye              </td></tr>
+<tr><td>SEA</td><td>Jason Myers            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>Cam Ward               </td></tr>
 <tr><td>MIA</td><td>Ollie Gordon           </td></tr>
